<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.lexu.materialexu.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/edit_time_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_time_title_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <EditText
        android:id="@+id/edit_time_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_title_optional"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/edit_time_title"
        app:layout_constraintStart_toStartOf="@+id/edit_time_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_time_title"/>

    <EditText
        android:id="@+id/edit_time_task_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/task_description_optional"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/edit_time_recorded_time_label"
        app:layout_constraintEnd_toEndOf="@+id/edit_time_task_title"
        app:layout_constraintStart_toStartOf="@+id/edit_time_task_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_time_task_title"/>

    <TextView
        android:id="@+id/edit_time_recorded_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/recorded_time_label_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_time_recorded_time"
        app:layout_constraintEnd_toEndOf="@+id/edit_time_recorded_time"/>

    <TextView
        android:id="@+id/edit_time_recorded_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableLeft="@drawable/ic_edit_black_24dp"
        android:drawableStart="@drawable/ic_edit_black_24dp"
        android:text="@string/formatted_time_placeholder"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_time_task_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_time_task_date"/>

    <TextView
        android:id="@+id/edit_time_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/date_placeholder"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_time_save"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/edit_time_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
