<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  Bogdan Andrei Alexandru Birsasteanu 2018.
  ~ All rights are reserved by Bogdan Andrei Alexandru Birsasteanu.
  ~ This is an open-source code, and it can be used as reference for various projects.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    android:elevation="4dp"
    android:paddingBottom="8dp"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/time_entry_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_placeholder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/time_entry_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/long_text_placeholder"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/time_entry_title"
        app:layout_constraintStart_toStartOf="@+id/time_entry_title"
        app:layout_constraintTop_toBottomOf="@+id/time_entry_title"/>

    <TextView
        android:id="@+id/time_entry_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formatted_time_placeholder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_entry_date"
        app:layout_constraintEnd_toEndOf="@+id/time_entry_description"
        app:layout_constraintTop_toTopOf="@+id/time_entry_date"/>

    <TextView
        android:id="@+id/time_entry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_placeholder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/time_entry_duration"
        app:layout_constraintStart_toStartOf="@+id/time_entry_description"
        app:layout_constraintTop_toBottomOf="@+id/time_entry_description"/>

</android.support.constraint.ConstraintLayout>