<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/launcher_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/application_logo"
        android:minHeight="100dp"
        android:minWidth="100dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/launcher_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/launcher_app_logo"
        app:layout_constraintStart_toStartOf="@+id/launcher_app_logo"
        app:layout_constraintTop_toBottomOf="@+id/launcher_app_logo"/>

    <TextView
        android:id="@+id/launcher_loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_phase_0_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/launcher_app_name"
        app:layout_constraintStart_toStartOf="@+id/launcher_app_name"
        app:layout_constraintTop_toBottomOf="@+id/launcher_app_name"/>
</android.support.constraint.ConstraintLayout>
